# SAM3cpplib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: PLAN.md  api.md  architecture.md  deployment.md  goldens.md  tensorrt.md
examples/: CMakeLists.txt  README.md  dump_encoder_weights.cpp  dump_pcs_calib_inputs.cpp  dump_pcs_pvs_weights.cpp  e2e_check.cpp  quantize.cpp  segment_image.cpp
examples/features/: 01_load_and_encode.cpp  02_text_prompt.cpp  03_point_prompts.cpp  04_box_prompt.cpp  05_exemplar_boxes.cpp  06_concept_embeddings.cpp  07_encode_once_prompt_many.cpp  08_mask_geometry.cpp  09_tensorrt_config.cpp  10_pcs_fp8.cpp
include/sam3cpp/: sam3.h
resources/: fp8_amax_sam3-q8_0.json  fp8_pcs_amax_sam3-q8_0.json
resources/models/: README.md
resources/onnx/: README.md
scripts/: README.md  build.sh  download_models.sh  export_onnx.sh  make_goldens.sh  setup.sh  setup_tensorrt.sh  verify_setup.sh
scripts/convert/: convert_sam3_encoder_to_onnx.py  convert_sam3_pcs_to_onnx.py  convert_sam3_pvs_to_onnx.py  extract_sam3_trt_runtime.py  fp8_amax_calib.py  fp8_inject_qdq.py  fp8_pcs_amax_calib.py  fp8_pcs_inject_qdq.py  sam3_onnx_common.py
scripts/development/: export_onnx.sh  make_goldens.sh
scripts/setup/: README.md  cuda_env.sh  setup_tensorrt.sh
src/: api.cpp  debug.cpp  image_io.cpp  mask_utils.cpp  model_load.cpp  preprocess.cpp  sam3_internal.h  state.cpp  tokenizer.cpp
src/ggml/: backbone.cpp  backend.cpp  pcs.cpp  pvs.cpp
src/trt/: trt_encoder.cpp  trt_engine.cpp  trt_engine.h  trt_pcs.cpp  trt_pvs.cpp  trt_runtime.cpp  trt_runtime.h
tests/: CMakeLists.txt  mask_utils_test.cpp  parity_test.sh
tests/consume_test/: CMakeLists.txt  main.cpp  run.sh
tests/goldens/box_prompt/: pcs_detections.txt  pvs_detections.txt
tests/goldens/exemplar_multi/: pcs_detections.txt  pvs_detections.txt
tests/goldens/text_point/: pvs_detections.txt
